Section small fix

--- a/assets/public/css/frontend.css
+++ b/assets/public/css/frontend.css
@@ -6014,6 +6014,11 @@ a.il_btn {
     border-radius: 0px 29px 29px 0px;
   }
 }
+@media (min-width: 1659.6px) {
+  .il_section.style-3 .il_section_inner .right img {
+    height: 59rem;
+  }
+}
 @media (max-width: 1199.5px) {
   .il_section.style-3 .il_section_inner > div {
     flex-basis: 100%;
